--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="js/main.js" defer ></script>
 </head>
 <body>
-<form action="handler.php">
+<form>
     <p> Input number from 1 to infinite: </p>
     <p><input id="firstNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="First number" required></p>
     <p><input  id="secondNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="Second number" required></p>
-    <p><input type="submit" value="Generate Random number"></p>
+    <p><input id="conf" type="submit" value="Generate Random number"></p>
 </form>
 </body>
 </html>
