--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js" defer ></script>
 </head>
 <body>
 <form>
-    <p> Input number from 1 to infinite: </p>
+    <h1>Input number from 1 to infinite:</h1>
     <p><input id="firstNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="First number" required></p>
     <p><input  id="secondNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="Second number" required></p>
-    <p><input id="conf" type="submit" value="Generate Random number"></p>
+    <p><input id="btnSbm" type="submit" value="Generate Random number"></p>
 </form>
 </body>
 </html>
