--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <form>
-    <h1>Input any number from 1 to infinite and get random number:</h1>
+    <h1> Input any number from one__ to infinite and get random number:  </h1>
     <p><input id="firstNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="First number" required></p>
     <p><input  id="secondNumber" type="number" size="30" name="num" min="1" max="9999999999999" placeholder="Second number" required></p>
     <p><input id="btnSbm" type="submit" value="Generate Random number"></p>
